--- a/index.html
+++ b/index.html
@@ -9,22 +9,70 @@
         <link rel="stylesheet" href="css\style.css">
     </head>
     <body>
-        <div class="header"></div>
-        <div class="banner"></div>
+        <div class="topnav">
+            <a href="index.html">Home</a>
+            <a href="/html/releases.html">Releases</a>
+            <a href="">Booking</a>
+            <a href="">Gallery</a>
+            <a href="">About</a>
+        </div>
+        <div class="banner">
+            <img src="/img/exiszt-header.png" alt="Exiszt Banner">
+        </div>
         <div class="main">
-            <p>main</p>
-            <div class="releases">
-                <h1>Releases</h1>
-                <div class="cover1"></div>
-                <div class="cover2"></div>
-                <div class="cover3"></div>
-                <div class="cover4"></div>
+            <div class="featured-releases">
+                <h1>Featured Releases</h1>
+                <div class="covers">
+                    <div id="cover1">
+                        <a href="https://soundcloud.com/exiszt/heart-machine?si=36c3fa144c034180bb9aea123ffdbba4&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing">
+                            <img src="/img/HeartMachine.png" alt="Heart Machine Cover Art">
+                            <h2>Heart Machine</h2>
+                        </a>
+                    </div>
+                    <div id="cover2">
+                        <a href="https://soundcloud.com/exiszt/sets/gatekeeper?si=7dc7d6adff214f6ea0a759153f741dbe&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing">
+                            <img src="/img/Gatekeeper.png" alt="Gatekeeper Cover Art">
+                            <h2>Gatekeeper</h2>
+                        </a>
+                    </div>
+                    <div id="cover3">
+                        <a href="https://soundcloud.com/exiszt/gorkos-planet?si=2a9bbe131445488eb366821f6b1e3a87&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing">
+                            <img src="/img/GorkoPlanet.png" alt="Gorko's Planet Cover Art">
+                            <h2>Gorko's Planet</h2>
+                        </a>
+                    </div>
+                    <div id="cover4">
+                        <a href="https://soundcloud.com/exiszt/synthesis-showcase-exiszt-live-62224/s-6Bf9aV2WxyB?si=fed96ba066a54ba480f963bf6f3524a2&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing">
+                            <img src="/img/Truth.png" alt="Truth Set List">
+                            <h2>Live Set</h2>
+                        </a>
+                    </div>
+                </div>  
             </div>
             <div class="main-body">
-                <div class="slides"><p>slides</p></div>
-                <div class="apperances"><p>notable apperances</p></div>               
-                <div class="biography"><p>biography</p></div>
-            </div>
+                <div id="bio-pic">
+                    <img src="/img/bio-pic.png" alt="">
+                </div>
+                <div id="bio">
+                    <h1>Biography</h1>
+                    <p>Exiszt is the musical-adjacent project of Gray Goliszek currently based out of North Carolina. He grew up as
+                        the roadie of punk bank Slappin’ Grama thanks to the euphonious involvement of their dad, which led to a
+                        lifetime of passion for live music. Some of their biggest influences derive from these early experiences. He
+                        feels that both artistically & personality-wise, he represents a mix between Donatello & Michaelangelo of the
+                        Teenage Mutant Ninja Turtles. Exiszt sets include a carefully curated selection of his favorite music
+                        showcased alongside original sounds. Styles tend to vary but generally one could expect to hear something
+                        that is almost, but not quite, entirely unlike Drum & Bass or Halftime.</p>
+                    <h1>Notable Apperances</h1>
+                    <p>With performances accross North &
+                        South America, Exiszt has shared the
+                        stage alongside: Truth, Monty, Spoonbill,
+                        Champagne Drip, The Widdler, Vinja, Kll
+                        Smth, Drrtywulvz, Duffrey, Zebbler
+                        Encanti Experience, Ace Aura, Pheel,
+                        Danny Grooves, Smigonaut,
+                        Bricksquash, Vide, INSPECT3R, Pathwey</p>
+                </div>
+            </div> 
         </div>
         
     </body>
