--- a/html/releases.html
+++ b/html/releases.html
@@ -17,56 +17,25 @@
             <a href="">Gallery</a>
             <a href="">About</a>
         </div>
-        <!--<div class="banner">
-            <img src="/img/exiszt-header.png" alt="Exiszt Banner">
-        </div>-->
-            <div id="releases">
-                <div id="releases-title">
-                    <h1>Releases</h1>
-                </div>
-                <div class="albums">
-                    <div class="album">
-                        <div class="album-img">
-                            <a href="https://soundcloud.com/exiszt/heart-machine?si=36c3fa144c034180bb9aea123ffdbba4&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing">
-                                <img src="/img/HeartMachine.png" alt="Heart Machine Cover Art">
-                            </a>
-                        </div>
-                        <div class="album-desc">
-                            <h2>Heart Machine</h2>
-                            <h3>Released 2022</h3>
-                            <p>Drifters of this world are the collectors of forgotten knowledge, lost technologies and broken histories.<br><br>A lonely soul, in a desperate search;<br>A searcher, aspiring to find a cure</div></p>
-                        </div>
-                    <div class="album">
-                        <div class="album-desc">
-                            <h2>Gatekeeper</h2>
-                            <p>I took inspiration from the art my friend Josh Coates created, and wrote these songs to tell the story of Mika who lives in a world where monsters roam free due to a broken portal between their planets and is charged with maintaining the gate between worlds and sending these creatures home.
-                                
-                                <br><br>All Tracks Written & Mixed by Exiszt
-                                <br>Mastering by Keota (keota-tunes.net)
-                                <br>Art by: Josh Coates
-                                </p>
-                        </div>
-                        <div class="album-img">
-                            <a href="https://soundcloud.com/exiszt/sets/gatekeeper?si=7dc7d6adff214f6ea0a759153f741dbe&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing">
-                                <img src="/img/Gatekeeper.png" alt="Gatekeeper Cover Art">
-                            </a>
-                        </div>
-                        
-                    </div>
-                    <div class="album">
-                        <a href="https://soundcloud.com/exiszt/gorkos-planet?si=2a9bbe131445488eb366821f6b1e3a87&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing">
-                            <img src="/img/GorkoPlanet.png" alt="Gorko's Planet Cover Art">
-                            <h2>Gorko's Planet</h2>
-                        </a>
-                    </div>
-                    <div class="album">
-                        <a href="https://soundcloud.com/exiszt/synthesis-showcase-exiszt-live-62224/s-6Bf9aV2WxyB?si=fed96ba066a54ba480f963bf6f3524a2&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing">
-                            <img src="/img/Truth.png" alt="Truth Set List">
-                            <h2>Live Set</h2>
-                        </a>
-                    </div>
-                </div>  
-            </div>
+        <div id="release-header">
+            <h1>Releases</h1>
         </div>
+        <div class="year">
+            <h2>Year</h2>
+        </div>
+        <div class="grid-container">
+            <img src="/img/Gatekeeper.png" alt="">
+            <img src="/img/GorkoPlanet.png" alt="">
+        </div>
+        <div class="year">
+            <h2>Year</h2>
+        </div>
+        <div class="grid-container">
+            <img src="/img/Gatekeeper.png" alt="">
+            <img src="/img/GorkoPlanet.png" alt="">
+            <img src="/img/HeartMachine.png" alt="">
+            <img src="/img/Truth.png" alt="">
+        </div>
+
     </body>
 </html>
