--- a/html/releases.html
+++ b/html/releases.html
@@ -20,21 +20,27 @@
         <div id="release-header">
             <h1>Releases</h1>
         </div>
-        <div class="year">
-            <h2>Year</h2>
-        </div>
         <div class="grid-container">
-            <img src="/img/Gatekeeper.png" alt="">
-            <img src="/img/GorkoPlanet.png" alt="">
-        </div>
-        <div class="year">
-            <h2>Year</h2>
-        </div>
-        <div class="grid-container">
-            <img src="/img/Gatekeeper.png" alt="">
-            <img src="/img/GorkoPlanet.png" alt="">
-            <img src="/img/HeartMachine.png" alt="">
-            <img src="/img/Truth.png" alt="">
+            <div class="grid-item">
+                <img src="/img/Gatekeeper.png" alt="">
+                <h3 class="title">Gatekeeper</h3>
+                <p class="release-date">Feb 2024</p>
+            </div>
+            <div class="grid-item">
+                <img src="/img/Gatekeeper.png" alt="">
+                <h3 class="title">Gatekeeper</h3>
+                <p class="release-date">Feb 2024</p>
+            </div>
+            <div class="grid-item">
+                <img src="/img/Gatekeeper.png" alt="">
+                <h3 class="title">Gatekeeper</h3>
+                <p class="release-date">Feb 2024</p>
+            </div>
+            <div class="grid-item">
+                <img src="/img/Gatekeeper.png" alt="">
+                <h3 class="title">Gatekeeper</h3>
+                <p class="release-date">Feb 2024</p>
+            </div>
         </div>
 
     </body>
