--- a/html/releases.html
+++ b/html/releases.html
@@ -13,14 +13,19 @@
         <div class="topnav">
             <a href="/index.html">Home</a>
             <a href="/html/releases.html">Releases</a>
-            <a href="">Booking</a>
-            <a href="">Gallery</a>
-            <a href="">About</a>
+            <a href="/html/booking.html">Booking</a>
+            <a href="/html/gallery.html">Gallery</a>
+            <a href="/html/about.html">About</a>
         </div>
         <div id="release-header">
             <h1>Releases</h1>
         </div>
         <div class="grid-container">
+            <div class="grid-item">
+                <img src="/img/Gatekeeper.png" alt="">
+                <h3 class="title">Gatekeeper</h3>
+                <p class="release-date">Feb 2024</p>
+            </div>
             <div class="grid-item">
                 <img src="/img/Gatekeeper.png" alt="">
                 <h3 class="title">Gatekeeper</h3>
