--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <div class="topnav">
             <a href="index.html">Home</a>
             <a href="/html/releases.html">Releases</a>
-            <a href="">Booking</a>
-            <a href="">Gallery</a>
-            <a href="">About</a>
+            <a href="/html/booking.html">Booking</a>
+            <a href="/html/gallery.html">Gallery</a>
+            <a href="/html/about.html">About</a>
         </div>
         <div class="banner">
             <img src="/img/exiszt-header.png" alt="Exiszt Banner">
