--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <div class="topnav">
             <a href="index.html">Home</a>
-            <a href="/html/releases.html">Releases</a>
+            <a href="/Exiszt-Online/html/releases.html">Releases</a>
             <a href="/html/booking.html">Booking</a>
             <a href="/html/gallery.html">Gallery</a>
             <a href="/html/about.html">About</a>
