--- a/html/gallery.html
+++ b/html/gallery.html
@@ -6,15 +6,15 @@
         <title>Exiszt Home</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/css/style.css">
+        <link rel="stylesheet" href="/Exiszt-Online/css/style.css">
     </head>
     <body>
         <div class="topnav">
-            <a href="/index.html">Home</a>
-            <a href="/html/releases.html">Releases</a>
-            <a href="/html/booking.html">Booking</a>
-            <a href="/html/gallery.html">Gallery</a>
-            <a href="/html/about.html">About</a>
+            <a href="/Exiszt-Online/index.html">Home</a>
+            <a href="/Exiszt-Online/html/releases.html">Releases</a>
+            <a href="/Exiszt-Online/html/booking.html">Booking</a>
+            <a href="/Exiszt-Online/html/gallery.html">Gallery</a>
+            <a href="/Exiszt-Online/html/about.html">About</a>
         </div>
 
         
