--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <a href="/Exiszt-Online/html/about.html">About</a>
         </div>
         <div class="banner">
-            <img src="/Exiszt-Online/img/exiszt-header.png" alt="Exiszt Banner">
+            <img src="/img/exiszt-header.png" alt="Exiszt Banner">
         </div>
         <div class="main">
             <div class="featured-releases">
