--- a/index.html
+++ b/index.html
@@ -76,12 +76,13 @@
         </div>
     </body>
     <footer>
-            <div class="footer-content">
-                <ul class="social-icons">
-                  <li><a href="https://www.facebook.com/Exisztt" target="_blank"><img src="/Exiszt-Online/img/icons/facebook-icons.png" alt="Facebook"></a></li>
-                  <li><a href="https://twitter.com/exiszt" target="_blank"><img src="/Exiszt-Online/img/icons/twitter-icon.png" alt="Twitter"></a></li>
-                  <li><a href="https://www.instagram.com/exiszt.music/" target="_blank"><img src="/Exiszt-Online/img/icons/instagram-icon.png" alt="Instagram"></a></li>
-                </ul>
-              </div>
+        <div class="footer-content">
+            <ul class="social-icons">
+                <li><a href="https://www.facebook.com/Exisztt" target="_blank"><img src="/Exiszt-Online/img/icons/facebook-icon.png" alt="Facebook"></a></li>
+                <li><a href="https://twitter.com/exiszt" target="_blank"><img src="/Exiszt-Online/img/icons/twitter-icon.png" alt="Twitter"></a></li>
+                <li><a href="https://www.instagram.com/exiszt.music/" target="_blank"><img src="/Exiszt-Online/img/icons/instagram-icon.png" alt="Instagram"></a></li>
+            </ul>
+            <p class="copyright">© 2024 Your Company Name. All Rights Reserved.</p>
+        </div>
     </footer>
 </html>
