--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <li><a href="https://twitter.com/exiszt" target="_blank"><img src="/Exiszt-Online/img/icons/twitter-icon.png" alt="Twitter"></a></li>
                 <li><a href="https://www.instagram.com/exiszt.music/" target="_blank"><img src="/Exiszt-Online/img/icons/instagram-icon.png" alt="Instagram"></a></li>
             </ul>
-            <p class="copyright">© 2024 Your Company Name. All Rights Reserved.</p>
+            <p class="copyright">© 2024 Exiszt. All Rights Reserved.</p>
         </div>
     </footer>
 </html>
