Rel linking base

--- a/index.html
+++ b/index.html
@@ -6,18 +6,19 @@
         <title>Exiszt Home</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/Exiszt-Online/css/style.css">
+        <base href="/">
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
         <div class="topnav">
             <a href="index.html">Home</a>
-            <a href="/Exiszt-Online/html/releases.html">Releases</a>
-            <a href="/Exiszt-Online/html/booking.html">Booking</a>
-            <a href="/Exiszt-Online/html/gallery.html">Gallery</a>
-            <a href="/Exiszt-Online/html/about.html">About</a>
+            <a href="html/releases.html">Releases</a>
+            <a href="html/booking.html">Booking</a>
+            <a href="html/gallery.html">Gallery</a>
+            <a href="html/about.html">About</a>
         </div>
         <div class="banner">
-            <img src="/Exiszt-Online/img/exiszt-header.png" alt="Exiszt Banner">
+            <img src="img/exiszt-header.png" alt="Exiszt Banner">
         </div>
         <div class="main">
             <div class="featured-releases">
@@ -25,25 +26,25 @@
                 <div class="covers">
                     <div id="cover1">
                         <a href="https://soundcloud.com/exiszt/heart-machine?si=36c3fa144c034180bb9aea123ffdbba4&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing">
-                            <img src="/Exiszt-Online/img/HeartMachine.png" alt="Heart Machine Cover Art">
+                            <img src="img/HeartMachine.png" alt="Heart Machine Cover Art">
                             <h2>Heart Machine</h2>
                         </a>
                     </div>
                     <div id="cover2">
                         <a href="https://soundcloud.com/exiszt/sets/gatekeeper?si=7dc7d6adff214f6ea0a759153f741dbe&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing">
-                            <img src="/Exiszt-Online/img/Gatekeeper.png" alt="Gatekeeper Cover Art">
+                            <img src="img/Gatekeeper.png" alt="Gatekeeper Cover Art">
                             <h2>Gatekeeper</h2>
                         </a>
                     </div>
                     <div id="cover3">
                         <a href="https://soundcloud.com/exiszt/gorkos-planet?si=2a9bbe131445488eb366821f6b1e3a87&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing">
-                            <img src="/Exiszt-Online/img/GorkoPlanet.png" alt="Gorko's Planet Cover Art">
+                            <img src="img/GorkoPlanet.png" alt="Gorko's Planet Cover Art">
                             <h2>Gorko's Planet</h2>
                         </a>
                     </div>
                     <div id="cover4">
                         <a href="https://soundcloud.com/exiszt/synthesis-showcase-exiszt-live-62224/s-6Bf9aV2WxyB?si=fed96ba066a54ba480f963bf6f3524a2&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing">
-                            <img src="/Exiszt-Online/img/Truth.png" alt="Truth Set List">
+                            <img src="img/Truth.png" alt="Truth Set List">
                             <h2>Live Set</h2>
                         </a>
                     </div>
@@ -51,7 +52,7 @@
             </div>
             <div class="main-body">
                 <div id="bio-pic">
-                    <img src="/Exiszt-Online/img/bio-pic.png" alt="">
+                    <img src="img/bio-pic.png" alt="">
                 </div>
                 <div id="bio">
                     <h1>Biography</h1>
@@ -78,9 +79,9 @@
     <footer>
         <div class="footer-content">
             <ul class="social-icons">
-                <li><a href="https://www.facebook.com/Exisztt" target="_blank"><img src="/Exiszt-Online/img/icons/facebook-icon.png" alt="Facebook"></a></li>
-                <li><a href="https://twitter.com/exiszt" target="_blank"><img src="/Exiszt-Online/img/icons/twitter-icon.png" alt="Twitter"></a></li>
-                <li><a href="https://www.instagram.com/exiszt.music/" target="_blank"><img src="/Exiszt-Online/img/icons/instagram-icon.png" alt="Instagram"></a></li>
+                <li><a href="https://www.facebook.com/Exisztt" target="_blank"><img src="img/icons/facebook-icon.png" alt="Facebook"></a></li>
+                <li><a href="https://twitter.com/exiszt" target="_blank"><img src="img/icons/twitter-icon.png" alt="Twitter"></a></li>
+                <li><a href="https://www.instagram.com/exiszt.music/" target="_blank"><img src="img/icons/instagram-icon.png" alt="Instagram"></a></li>
             </ul>
             <p class="copyright">© 2024 Exiszt. All Rights Reserved.</p>
         </div>
