--- a/html/booking.html
+++ b/html/booking.html
@@ -6,7 +6,7 @@
         <title>Exiszt Home</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <base href="/">
+        <base href="/Exiszt-Online/">
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/booking.css">
     </head>
