--- a/index.html
+++ b/index.html
@@ -26,25 +26,25 @@
                 <h1>Featured Releases</h1>
                 <div class="covers">
                     <div id="cover1">
-                        <a href="https://soundcloud.com/exiszt/heart-machine?si=36c3fa144c034180bb9aea123ffdbba4&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing">
+                        <a href="https://soundcloud.com/exiszt/heart-machine?si=36c3fa144c034180bb9aea123ffdbba4&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank">
                             <img src="img/HeartMachine.png" alt="Heart Machine Cover Art">
                             <h2>Heart Machine</h2>
                         </a>
                     </div>
                     <div id="cover2">
-                        <a href="https://soundcloud.com/exiszt/sets/gatekeeper?si=7dc7d6adff214f6ea0a759153f741dbe&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing">
+                        <a href="https://soundcloud.com/exiszt/sets/gatekeeper?si=7dc7d6adff214f6ea0a759153f741dbe&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank">
                             <img src="img/Gatekeeper.png" alt="Gatekeeper Cover Art">
                             <h2>Gatekeeper</h2>
                         </a>
                     </div>
                     <div id="cover3">
-                        <a href="https://soundcloud.com/exiszt/gorkos-planet?si=2a9bbe131445488eb366821f6b1e3a87&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing">
+                        <a href="https://soundcloud.com/exiszt/gorkos-planet?si=2a9bbe131445488eb366821f6b1e3a87&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank">
                             <img src="img/GorkoPlanet.png" alt="Gorko's Planet Cover Art">
                             <h2>Gorko's Planet</h2>
                         </a>
                     </div>
                     <div id="cover4">
-                        <a href="https://soundcloud.com/exiszt/synthesis-showcase-exiszt-live-62224/s-6Bf9aV2WxyB?si=fed96ba066a54ba480f963bf6f3524a2&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing">
+                        <a href="https://soundcloud.com/exiszt/synthesis-showcase-exiszt-live-62224/s-6Bf9aV2WxyB?si=fed96ba066a54ba480f963bf6f3524a2&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank">
                             <img src="img/Truth.png" alt="Truth Set List">
                             <h2>Live Set</h2>
                         </a>
